--- a/.htaccess
+++ b/.htaccess
@@ -44,12 +44,9 @@ AddDefaultCharset uft-8
 
   # DESCRIPTIONS
   AddDescription "Linux documentation" Linux-HOWTOs -HOWTO.txt
-  AddDescription "Microlinux Enterprise Desktop 14.0"   MLED-14.0
-  AddDescription "Microlinux Enterprise Server 14.0"    MLES-14.0
-  AddDescription "Microlinux Enterprise Workstation 14.0"    MLWS-14.0
-  AddDescription "Work in progress..."    MLWS-14.1
-  AddDescription "Work in progress..."    MLED-14.1
-  AddDescription "Work in progress..."    MLES-14.1
+  AddDescription "Extra Software for 32-bit Slackware Server" server-14.0-32bit
+  AddDescription "Extra Software for 64-bit Slackware Server" server-14.0-64bit
+  AddDescription "Source Code for Extra Server Software" server-14.0-source
   AddDescription "Plain text file" .txt README
   AddDescription "Slackware build script" .SlackBuild
   AddDescription "Slackware package" .txz
