--- a/desktop-kde-14.0-64bit/config/slackpkgplus.conf
+++ b/desktop-kde-14.0-64bit/config/slackpkgplus.conf
@@ -2,8 +2,9 @@
 SLACKPKGPLUS=on
 VERBOSE=1
 USEBL=1
-PKGS_PRIORITY=( desktop-base:.* desktop-kde:.* )
-REPOPLUS=( desktop-base desktop-kde slackpkgplus )
+PKGS_PRIORITY=( multilib:.* desktop-base:.* desktop-kde:.* )
+REPOPLUS=( multilib desktop-base desktop-kde slackpkgplus )
+MIRRORPLUS['multilib']=http://taper.alienbase.nl/mirrors/people/alien/multilib/14.0/
 MIRRORPLUS['desktop-base']=http://www.microlinux.fr/slackware/desktop-base-14.0-64bit/
 MIRRORPLUS['desktop-kde']=http://www.microlinux.fr/slackware/desktop-kde-14.0-64bit/
 MIRRORPLUS['slackpkgplus']=http://slakfinder.org/slackpkg+/
