--- a/desktop-mate-14.0-32bit/tools/desktop/mate-screenshot.desktop
+++ b/desktop-mate-14.0-32bit/tools/desktop/mate-screenshot.desktop
@@ -8,7 +8,7 @@ Terminal=false
 Type=Application
 Icon=applets-screenshooter
 StartupNotify=true
-Categories=GTK;MATE;Utility;
+Categories=Graphics;
 OnlyShowIn=MATE;
 X-MATE-Bugzilla-Bugzilla=MATE
 X-MATE-Bugzilla-Product=mate-utils
