--- a/.htaccess
+++ b/.htaccess
@@ -46,15 +46,15 @@ AddDefaultCharset uft-8
   AddDescription "Microlinux documentation in French" Linux-HOWTOs -HOWTO.txt
   AddDescription "Helper scripts" tools
   AddDescription "Obsolete software" pasture
-  AddDescription "Work in progress" desktop-base-14.0-32bit
-  AddDescription "Work in progress" desktop-base-14.0-64bit
-  AddDescription "Work in progress" desktop-base-14.0-source
+  AddDescription "Microlinux Enterprise Desktop Base 14.0 32-bit" desktop-base-14.0-32bit
+  AddDescription "Microlinux Enterprise Desktop Base 14.0 64-bit" desktop-base-14.0-64bit
+  AddDescription "Microlinux Enterprise Desktop Base 14.0 source" desktop-base-14.0-source
   AddDescription "Work in progress" desktop-base-14.1-32bit
   AddDescription "Work in progress" desktop-base-14.1-64bit
   AddDescription "Work in progress" desktop-base-14.1-source
-  AddDescription "Work in progress" desktop-kde-14.0-32bit
-  AddDescription "Work in progress" desktop-kde-14.0-64bit
-  AddDescription "Work in progress" desktop-kde-14.0-source
+  AddDescription "Microlinux Enterprise Desktop KDE 14.0 32-bit" desktop-kde-14.0-32bit
+  AddDescription "Microlinux Enterprise Desktop KDE 14.0 64-bit" desktop-kde-14.0-64bit
+  AddDescription "Microlinux Enterprise Desktop KDE 14.0 source" desktop-kde-14.0-source
   AddDescription "Work in progress" desktop-kde-14.1-32bit
   AddDescription "Work in progress" desktop-kde-14.1-64bit
   AddDescription "Work in progress" desktop-kde-14.1-source
@@ -70,9 +70,9 @@ AddDefaultCharset uft-8
   AddDescription "Work in progress" desktop-xfce-14.1-32bit
   AddDescription "Work in progress" desktop-xfce-14.1-64bit
   AddDescription "Work in progress" desktop-xfce-14.1-source
-  AddDescription "Microlinux Server 14.0 32-bit" server-14.0-32bit
-  AddDescription "Microlinux Server 14.0 64-bit" server-14.0-64bit
-  AddDescription "Microlinux Server 14.0 source code" server-14.0-source
+  AddDescription "Microlinux Enterprise Server 14.0 32-bit" server-14.0-32bit
+  AddDescription "Microlinux Enterprise Server 14.0 64-bit" server-14.0-64bit
+  AddDescription "Microlinux Enterprise Server 14.0 source" server-14.0-source
   AddDescription "Work in progress" server-14.1-32bit
   AddDescription "Work in progress" server-14.1-64bit
   AddDescription "Work in progress" server-14.1-source
