--- a/desktop-xfce-14.0-32bit/tools/desktop/base.desktop
+++ b/desktop-xfce-14.0-32bit/tools/desktop/base.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Icon=openofficeorg3-base
 Type=Application
 Categories=Office;
-Exec=sbase %U
+Exec=openoffice4 -base %U
 MimeType=application/vnd.oasis.opendocument.database;application/vnd.sun.xml.base;
 Name=Database 
 Name[de]=Datenbanken
