--- a/desktop-xfce-14.0-32bit/tools/desktop/draw.desktop
+++ b/desktop-xfce-14.0-32bit/tools/desktop/draw.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Icon=openofficeorg3-draw
 Type=Application
 Categories=Graphics;
-Exec=sdraw %U
+Exec=openoffice4 -draw %U
 MimeType=application/vnd.oasis.opendocument.graphics;application/vnd.oasis.opendocument.graphics-template;application/vnd.sun.xml.draw;application/vnd.sun.xml.draw.template;application/vnd.stardivision.draw;
 Name=Drawing Program
 Name[de]=Zeichenprogramm
