--- a/desktop-xfce-14.0-32bit/tools/desktop/math.desktop
+++ b/desktop-xfce-14.0-32bit/tools/desktop/math.desktop
@@ -4,7 +4,7 @@ Terminal=false
 Icon=openofficeorg3-math
 Type=Application
 Categories=Office;
-Exec=smath %U
+Exec=openoffice4 -math %U
 MimeType=application/vnd.oasis.opendocument.formula;application/vnd.sun.xml.math;application/vnd.stardivision.math;
 Name=Formula Editor
 Name[de]=Formeleditor
