--- a/desktop-mate-14.0-32bit/config/slackpkgplus.conf
+++ b/desktop-mate-14.0-32bit/config/slackpkgplus.conf
@@ -2,8 +2,9 @@
 SLACKPKGPLUS=on
 VERBOSE=1
 USEBL=1
-PKGS_PRIORITY=( desktop-base:.* desktop-mate:.* )
-REPOPLUS=( desktop-base desktop-mate slackpkgplus )
+PKGS_PRIORITY=( msb:.* desktop-base:.* desktop-mate:.* )
+REPOPLUS=( msb desktop-base desktop-mate slackpkgplus )
+MIRRORPLUS['msb']=http://slackware.org.uk/msb/14.0/1.6/x86/
 MIRRORPLUS['desktop-base']=http://www.microlinux.fr/slackware/desktop-base-14.0-32bit/
 MIRRORPLUS['desktop-mate']=http://www.microlinux.fr/slackware/desktop-mate-14.0-32bit/
 MIRRORPLUS['slackpkgplus']=http://slakfinder.org/slackpkg+/
