--- a/.htaccess
+++ b/.htaccess
@@ -49,6 +49,15 @@ AddDefaultCharset uft-8
   AddDescription "Microlinux Enterprise Server 14.0 32-bit" MLES-14.0-32bit
   AddDescription "Microlinux Enterprise Server 14.0 64-bit" MLES-14.0-64bit
   AddDescription "Microlinux Enterprise Server 14.0 source" MLES-14.0-source
+  AddDescription "Work in progress" MLES-14.1-32bit
+  AddDescription "Work in progress" MLES-14.1-64bit
+  AddDescription "Work in progress" MLES-14.1-source
+  AddDescription "Work in progress" MLED-14.0-32bit
+  AddDescription "Work in progress" MLED-14.0-64bit
+  AddDescription "Work in progress" MLED-14.0-source
+  AddDescription "Work in progress" MLED-14.1-32bit
+  AddDescription "Work in progress" MLED-14.1-64bit
+  AddDescription "Work in progress" MLED-14.1-source
   AddDescription "Plain text file" .txt README
   AddDescription "Slackware build script" .SlackBuild
   AddDescription "Slackware package" .txz
